--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
     "danbooru": "3.0.7", 
     "node-osu": "^1.3.0", 
     "booru": "^0.5.0", 
-    "dblapi.js": "^2.1.0"
+    "dblapi.js": "^2.1.0", 
+    "ytdl-core": "^0.20.4", 
+    "node-opus": "^0.3.0", 
+    "simple-youtube-api": "^5.0.2", 
+    "ffmpeg-binaries": "^3.2.2-3"
   },
   "engines": {
     "node": "8.x"
